<resources>
    <string name="ApplicationName">Falcon Browser</string>
    <string name="ApplicationDescription">Seal Browser is an open-source browser for Android.</string>
    <string name="AboutVersionText">Version: %1$s (%2$s)</string>
    <string name="AboutLicenseText">License: GPLv3</string>
    <string name="AboutUrlText">https://github.com/Anasthase/TintBrowser</string>
    <string name="PermissionReadBookmarksLabel">Read Tint Browser bookmarks</string>
    <string name="PermissionReadBookmarksDescription">Allow third-party applications or addons to read Tint Browser\'s history and bookmarks database.</string>
	<string name="PermissionWriteBookmarksLabel">Write Tint Browser bookmarks</string>
    <string name="PermissionWriteBookmarksDescription">Allow third-party applications or addons to write Tint Browser\'s history and bookmarks database.</string>
    <string name="PermissionBindAddonServiceLabel">Bind Tint Browser addons services</string>
    <string name="PermissionBindAddonServiceDescription">Allow an application to bind to Tint Browser\'s addons services. Only Tint Browser itself should have this permission.</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="On">ON</string>
    <string name="Off">OFF</string>
    <string name="Clear">Clear</string>
    <string name="Continue">Continue</string>
    <string name="Proceed">Proceed</string>
    <string name="VideoLoading">Loading video\u2026</string>
    <string name="History">History</string>
    <string name="All">All</string>
    <string name="Bookmarks">Bookmarks</string>
    <string name="Preferences">Settings</string>
    <string name="UrlBarUrlDefaultSubTitle">Tap to enter an URL or a search.</string>
    <string name="UrlBarUrlHint">Enter a search or an URL</string>
    <string name="ShareChooserTitle">Share via</string>
    <string name="FileChooserPrompt">Choose file for upload</string>
    <string name="Download">Download</string>
    <string name="DownloadDialogTitle">Download</string>
    <string name="DownloadInIncognito">Incognito download</string>
    <string name="DownloadStart">Downloading %1$s&#8230;</string>
    <string name="DownloadComplete">Download complete.</string>
    <string name="DownloadFailedWithErrorMessage">Download failed: %1$s.</string>
    <string name="DownloadErrorDisk">Disk error, check if you have a storage media, and if it has enough space left.</string>
    <string name="DownloadErrorHttp">HTTP error</string>
    <string name="DownloadErrorRedirection">Too many redirections</string>
    <string name="DownloadErrorUnknown">Unknown error</string>
    <string name="DownloadErrorNotSupportedScheme">Cannot download: only support http/https url</string>
    <string name="DownloadErrorInvalidUrl">Cannot download: Invalid url</string>
    <string name="ContextMenuOpen">Open</string>
    <string name="ContextMenuOpenNewTab">Open in a new tab</string>
    <string name="ContextMenuCopyLinkUrl">Copy link URL</string>
    <string name="ContextMenuDownload">Download</string>
    <string name="ContextMenuShareLinkUrl">Share link</string>
    <string name="ContextMenuViewImage">View image</string>
    <string name="ContextMenuCopyImageUrl">Copy image url</string>
    <string name="ContextMenuDownloadImage">Download image</string>
    <string name="ContextMenuShareImageUrl">Share image</string>
    <string name="ContextMenuSendEmail">Send email</string>
    <string name="ContextMenuCopyEmailUrl">Copy email url</string>
    <string name="ContextMenuShareEmailUrl">Share email</string>
    <string name="UrlCopyToastMessage">Url copied to clipboard.</string>
    <string name="ContextMenuShareUrl">Share</string>
    <string name="JavaScriptAlertDialog">JavaScript alert dialog</string>
    <string name="JavaScriptConfirmDialog">JavaScript confirm dialog</string>
    <string name="JavaScriptPromptDialog">JavaScript prompt dialog</string>
	<string name="SslWarning">Security warning</string>
	<string name="SslWarningsHeader">There are problems with the security certificate for this site (%s).</string>
	<string name="SslUntrusted">This certificate is not from a trusted authority.</string>
	<string name="SslIDMismatch">The name of the site does not match the name on the certificate.</string>
	<string name="SslExpired">This certificate has expired.</string>
	<string name="SslNotYetValid">This certificate is not valid yet.</string>
    <string name="NewTab">New tab</string>
    <string name="CloseTab">Close current tab</string>
    <string name="AddBookmark">Add bookmark</string>
    <string name="SharePage">Share page</string>
    <string name="Search">Find on page</string>
    <string name="BookmarksTitle">Bookmarks &amp; History</string>
    <string name="BookmarksTabTitle">Bookmarks</string>
    <string name="HistoryTabTitle">History</string>
    <string name="ImportHistoryBookmarks">Import</string>
    <string name="ExportHistoryBookmarks">Export</string>
    <string name="ClearHistoryBookmarks">Clear</string>
    <string name="AddBookmarkTitle">Add bookmark</string>
    <string name="BookmarkText">Label</string>
    <string name="UrlText">Address</string>
    <string name="UrlHint">http://</string>
    <string name="AddBookmarkLabelOrUrlEmpty">Please provide a valid label and url.</string>
    <string name="OpenInTab">Open in a new tab</string>
    <string name="EditBookmark">Edit bookmark</string>
    <string name="CopyUrl">Copy url</string>
    <string name="DeleteBookmark">Delete bookmark</string>
    <string name="DeleteHistoryItem">Delete from history</string>
    <string name="PreferencesActivityTitle">Settings</string>
    <string name="PreferenceHeaderGeneralSettingsTitle">General settings</string>
    <string name="PreferenceGeneralHomepageTitle">Home page</string>
    <string name="PreferenceGeneralHomepageSummary">Set the home page to load when opening a new tab, etc.</string>
    <string name="PreferenceHomePageDialogTitle">Home page</string>
    <string name="PreferenceGeneralSearchUrlTitle">Search engine</string>
    <string name="PreferenceGeneralSearchUrlSummary">Set the search engine used to make default search from the url bar.</string>
    <string name="PreferenceCategoryStartPageTitle">Start page</string>
    <string name="PreferenceGeneralStartPageLimitTitle">Number of items in the start page</string>
    <string name="PreferenceGeneralStartPageLimitSummary">Set the number of items to show in the start page.</string>
    <string name="PreferenceCategoryUITitle">User interface</string>
    <string name="PreferenceBubblePositionTitle">Bubble position</string>
    <string name="PreferenceBubblePositionSummary">Position of the bubble allowing to show the toolbars.</string>
    <string name="PreferenceBubblePositionRight">Right</string>
    <string name="PreferenceBubblePositionLeft">Left</string>
    <string name="PreferenceBubblePositionBoth">Both</string>
    <string-array name="PreferenceBubblePositionEntries">
		<item>@string/PreferenceBubblePositionRight</item>
		<item>@string/PreferenceBubblePositionLeft</item>
		<item>@string/PreferenceBubblePositionBoth</item>
	</string-array>
    <string-array name="PreferenceBubblePositionValues">
		<item>RIGHT</item>
		<item>LEFT</item>
		<item>BOTH</item>
	</string-array>
    <string name="PreferenceToolbarsAutoHideDurationTitle">Toolbars display duration</string>
    <string name="PreferenceToolbarsAutoHideDurationSummary">Set how long toolbars are shown, in seconds.</string>
    <string name="PreferenceSwitchTabsMethodTitle">Switch tabs method</string>
    <string name="PreferenceSwitchTabsMethodSummary">Set how you can switch between tabs.</string>
    <string name="PreferenceSwitchTabsMethodButtons">Buttons</string>
    <string name="PreferenceSwitchTabsMethodFling">Fling</string>
    <string name="PreferenceSwitchTabsMethodBoth">Both</string>
    <string-array name="PreferenceSwitchTabsMethodEntries">
		<item>@string/PreferenceSwitchTabsMethodButtons</item>
		<item>@string/PreferenceSwitchTabsMethodFling</item>
		<item>@string/PreferenceSwitchTabsMethodBoth</item>
	</string-array>
    <string-array name="PreferenceSwitchTabsMethodValues">
		<item>BUTTONS</item>
		<item>FLING</item>
		<item>BOTH</item>
	</string-array>
    <string name="PreferenceHeaderBrowserSettingsTitle">Browser settings</string>
    <string name="PreferenceEnableJavascriptTitle">Enable JavaScript</string>
    <string name="PreferenceEnableJavascriptSummaryOn">JavaScript is enabled.</string>
    <string name="PreferenceEnableJavascriptSummaryOff">JavaScript is disabled.</string>
    <string name="PreferenceEnableImagesTitle">Enable images</string>
    <string name="PreferenceEnableImagesSummary">Check if you want to load images.</string>
    <string name="PreferenceUseWideViewportTitle">Use wide view port</string>
    <string name="PreferenceUseWideViewportSummary">If checked, browser will use a viewport similar to desktop browsers.</string>
    <string name="PreferenceLoadPagesWithOverviewTitle">Load pages with overview</string>
    <string name="PreferenceLoadPagesWithOverviewSummary">Check if you want to load pages zoomed out to show an overview of the page.</string>
    <string name="PreferencePluginsTitle">Enable plugins</string>
    <string name="PreferencePluginsSummary">Choose how to manage plugins.</string>
    <string name="PreferencePluginsAlwaysOff">Always off</string>
    <string name="PreferencePluginsOnDemand">On demand</string>
    <string name="PreferencePluginsAlwaysOn">Always on</string>
    <string-array name="PreferencePluginsEntries">
		<item>@string/PreferencePluginsAlwaysOff</item>
		<item>@string/PreferencePluginsOnDemand</item>
		<item>@string/PreferencePluginsAlwaysOn</item>
	</string-array>
    <string-array name="PreferencePluginsValues">
		<item>OFF</item>
		<item>ON_DEMAND</item>
		<item>ON</item>
	</string-array>
    <string name="PreferenceUserAgentTitle">User-agent</string>
    <string name="PreferenceUserAgentSummary">Set the user-agent string used by the browser.</string>
    <string name="PreferenceUserAgentDialogTitle">User-agent</string>
    <string name="PreferenceHeaderPrivacySettingsTitle">Privacy &amp; security settings</string>
    <string name="PreferencePrivacyClearCacheTitle">Clear cache</string>
    <string name="PreferencePrivacyClearCacheSummary">Clear locally cached content and databases.</string>
    <string name="PreferenceCategoryHistoryTitle">History</string>
    <string name="PreferencePrivacyHistorySizeTitle">History size</string>
    <string name="PreferencePrivacyHistorySizeSummary">Define the history size, in days.</string>
    <string name="PreferencePrivacyClearHistoryTitle">Clear history</string>
    <string name="PreferencePrivacyClearHistorySummary">Clear the browser navigation history.</string>
    <string name="PreferenceCategoryCookiesTitle">Cookies</string>
    <string name="PreferencePrivacyAcceptCookiesTitle">Accept cookies</string>
    <string name="PreferencePrivacyAcceptCookiesSummary">Allow sites to save and read cookie data.</string>
    <string name="PreferencePrivacyClearCookiesTitle">Clear cookies</string>
    <string name="PreferencePrivacyClearCookiesSummary">Clear all browser cookies.</string>
    <string name="PreferenceCategoryGeolocationTitle">Location</string>
    <string name="PreferencePrivacyEnableGeolocationTitle">Enable location</string>
    <string name="PreferenceHeaderAddonsTitle">Addons</string>
    <string name="ContentDescriptionGoStopReloadButton">Go / Stop / Reload button</string>
    <string name="ContentDescriptionMenuButton">Menu button</string>
    <string name="ContentDescriptionPrivateBrowsingIndicator">Private browsing indicator</string>
    <string name="PreferenceHeaderAccessibilityTitle">Accessibility settings</string>
</resources>