<?xml version="1.0" encoding="utf-8"?>

<!--
   Tint Browser for Android

   Copyright (C) 2014 mogoweb.
   Copyright (C) 2012 - to infinity and beyond J. Devauchelle and contributors.

   This program is free software; you can redistribute it and/or
   modify it under the terms of the GNU General Public License
   version 3 as published by the Free Software Foundation.

   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
 -->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header android:fragment="com.nicksong.falcon.ui.preferences.GeneralPreferencesFragment"
            android:title="@string/PreferenceHeaderGeneralSettingsTitle" />

	<header android:fragment="com.nicksong.falcon.ui.preferences.BrowserPreferencesFragment"
            android:title="@string/PreferenceHeaderBrowserSettingsTitle" />

	<header android:fragment="com.nicksong.falcon.ui.preferences.PrivacyPreferencesFragment"
            android:title="@string/PreferenceHeaderPrivacySettingsTitle" />

	<header android:fragment="com.nicksong.falcon.ui.preferences.AccessibilityPreferencesFragment"
            android:title="@string/PreferenceHeaderAccessibilityTitle" />

	<!--
	<header android:fragment="com.nicksong.falcon.ui.preferences.AdvancedPreferencesFragment"
            android:title="@string/PreferenceHeaderAdvancedSettingsTitle" />
    -->

	<header android:fragment="com.nicksong.falcon.ui.preferences.AddonsFragment"
            android:title="@string/PreferenceHeaderAddonsTitle" />


</preference-headers>