<?xml version="1.0" encoding="utf-8"?>

<!--
   Tint Browser for Android

   Copyright (C) 2012 - to infinity and beyond J. Devauchelle and contributors.

   This program is free software; you can redistribute it and/or
   modify it under the terms of the GNU General Public License
   version 3 as published by the Free Software Foundation.

   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.nicksong.falcon"
    android:id="@+id/UrlBarContainer"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:background="@drawable/ic_searchbox"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/UrlBarQrcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/ContentDescriptionGoStopReloadButton"
        android:src="@drawable/ic_qrcode" />
    
    <ImageView
        android:id="@+id/UrlDiver"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/UrlBarQrcode"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/ContentDescriptionGoStopReloadButton"
        android:src="@drawable/searchbox_divider" />

    <ImageView
        android:id="@+id/ImagePrivateBrowsing"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/UrlDiver"
        android:layout_centerVertical="true"
        android:contentDescription="@string/ContentDescriptionPrivateBrowsingIndicator"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:src="@drawable/ic_incognito_holo_dark"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/UrlBarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ImagePrivateBrowsing" >

        <RelativeLayout
            android:id="@+id/UrlBarTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/UrlBarGoStopReload"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/UrlBarSubTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/searchbox_suggestitem_icon_search"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:padding="8dip"
                android:singleLine="true"
                android:textColor="@color/black_1"
                android:textSize="@dimen/font_size_m" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/UrlBarUrlLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/UrlBarGoStopReload"
            android:orientation="horizontal"
            android:visibility="invisible" >

            <com.nicksong.falcon.ui.views.ClearAutocompleteText
                android:id="@+id/UrlBarUrlEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dip"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/UrlBarUrlHint"
                android:inputType="textUri"
                android:selectAllOnFocus="true"
                android:textColor="@color/black_1"
                android:textSize="@dimen/font_size_m" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/UrlBarGoStopReload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/MenuButton"
            android:contentDescription="@string/ContentDescriptionGoStopReloadButton"
            android:focusable="true"
            android:paddingLeft="12dip"
            android:paddingRight="10dip"
            android:src="@drawable/ic_go" />

        <ImageView
            android:id="@+id/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/ContentDescriptionMenuButton"
            android:focusable="true"
            android:paddingLeft="6dip"
            android:paddingRight="10dip"
            android:src="@drawable/ic_menu_overflow" />
    </RelativeLayout>

</RelativeLayout>